style (dashboard): fix buttons alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -226,6 +226,10 @@ header {
     color: #0d6efd;
 }
 
+.dashboard-events-container form {
+    display: inline-block;
+}
+
 /* FOOTER */
 
 footer {
